[FIX] Hamburger button background
Tab behind the hamburger menu was
just a little misaligned

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -543,7 +543,7 @@ a.index-item {
       width: 80px;
       transform: rotate(45deg);
       height: 80px;
-      left: -52px;
+      left: -51px;
       display: block;
       z-index: -1;
       position: absolute;
